--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @import java.util.Date
-@(lastBlocks: List[Header])
+@(lastBlocks: List[(Header, Int)])
 
 <html>
 
@@ -300,25 +300,29 @@
                                 <th scope="col">Id</th>
                                 <th scope="col">Timestamp</th>
                                 <th scope="col">Nonce</th>
+                                <th scope="col">TxAmount</th>
                             </tr>
                             </thead>
                             <tbody>
                             @for(p <- lastBlocks) {
                             <tr>
                                 <td>
-                                    @p.height
+                                    @p._1.height
                                 </td>
                                 <td>
-                                    <a href="@routes.BlockController.getBlockView(p.id)" class="nav-link" target="_blank">
-                                    @p.id</a>
+                                    <a href="@routes.BlockController.getBlockView(p._1.id)" class="nav-link" target="_blank">
+                                    @p._1.id</a>
                                 </td>
                                 <td>
                                     @{
-                                    new Date(p.timestamp).format("yyyy-MM-dd HH:mm:ss")
+                                    new Date(p._1.timestamp).format("yyyy-MM-dd HH:mm:ss")
                                     }
                                 </td>
                                 <td>
-                                    @p.nonce
+                                    @p._1.nonce
+                                </td>
+                                <td>
+                                    @p._2
                                 </td>
                             </tr>
                             }
