--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -300,7 +300,7 @@
                                 <th scope="col">Id</th>
                                 <th scope="col">Timestamp</th>
                                 <th scope="col">Nonce</th>
-                                <th scope="col">TxAmount</th>
+                                <th scope="col">TxQty</th>
                             </tr>
                             </thead>
                             <tbody>
