--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -300,6 +300,7 @@
                                 <th scope="col">Id</th>
                                 <th scope="col">Timestamp</th>
                                 <th scope="col">Nonce</th>
+                                <th scope="col">TxQty</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -319,6 +320,9 @@
                                 </td>
                                 <td>
                                     @p.nonce
+                                </td>
+                                <td>
+                                    @p.txCount
                                 </td>
                             </tr>
                             }
