--- a/app/views/blockInfo.scala.html
+++ b/app/views/blockInfo.scala.html
@@ -263,7 +263,7 @@
                                                 </div>
                                             </th>
                                             <td>
-                                            @block.header.transactionsRoot
+                                            @block.header.txRoot
                                             </td>
                                         </tr>
                                         <tr>
