--- a/app/views/transactionInfo.scala.html
+++ b/app/views/transactionInfo.scala.html
@@ -331,20 +331,20 @@
                                             </td>
                                             <td>
                                                 <span class="badge badge-dot mr-4">
-                                                @output.monetaryValue
+                                                @output.value
                                                 </span>
                                             </td>
                                             <td>
                                                 <span class="badge badge-dot mr-4">
                                                 @{
-                                                    if(output.coinId == "487291c237b68dd2ab213be6b5d1174666074a5afab772b600ea14e8285affab")
-                                                    "Encry Coin" else output.coinId
+                                                    if(output.tokenId == "487291c237b68dd2ab213be6b5d1174666074a5afab772b600ea14e8285affab")
+                                                    "Encry Coin" else output.tokenId
                                                 }
                                                 </span>
                                             </td>
                                             <td>
                                                 <span class="badge badge-dot mr-4">
-                                                @output.contractHash
+                                                @output.proposition
                                                 </span>
                                             </td>
                                             <td>
