--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -150,15 +150,14 @@
             <!-- Brand -->
             <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./index.html">Encry explorer</a>
             <!-- Form -->
-            <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto" method="get"
-            action="/search/f1adfb198006d543c8423fd66981fd489b5ad01f4331a81d95aa3b622f1e37a2">
+            <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
                 <div class="form-group mb-0">
                     <div class="input-group input-group-alternative">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-search"></i></span>
                         </div>
-                        <input class="form-control" placeholder="Search" type="search" value >
-
+                        <input class="form-control" id="mySearch" placeholder="Search" type="search" value>
+                        <button id="myButton">Search</button>
                     </div>
                 </div>
             </form>
@@ -382,6 +381,7 @@
 <script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
 <!-- Argon JS -->
 <script src="./assets/js/argon.js?v=1.0.0"></script>
+<script src="./assets/js/search.js?v=1.0.0"></script>
 </body>
 
 </html>
