--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -286,9 +286,30 @@
                             <div class="col">
                                 <h3 class="mb-0">Blocks</h3>
                             </div>
-                            <div class="col text-right">
-                                <a href="#!" class="btn btn-sm btn-primary">See all</a>
-                            </div>
+                            <nav aria-label="...">
+                                <ul id="demo" class="pagination justify-content-end mb-0">
+                                    <li class="page-item disabled">
+                                        <a class="page-link" href="#" tabindex="-1">
+                                            <i class="fas fa-angle-left"></i>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item" >
+                                        <a class="page-link" href="#">1</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="@routes.HomeController.index()">2</a>
+                                    </li>
+                                    <li class="page-item"><a class="page-link" href="#">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">
+                                            <i class="fas fa-angle-right"></i>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                     <div class="table-responsive">
@@ -369,6 +390,8 @@
 <script src="./assets/vendor/chart.js/dist/Chart.extension.js"></script>
 <!-- Argon JS -->
 <script src="./assets/js/argon.js?v=1.0.0"></script>
+<script src="./assets/js/pagination.js?v=1.0.0"></script>
+<script src="./assets/js/someJS.js?v=1.0.0"></script>
 </body>
 
 </html>
