--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @import java.util.Date
-@(lastBlocks: List[Header])
+@(lastBlocks: List[Header], bestHeight: Int)
 
 <html>
 
@@ -18,6 +18,7 @@
     <link href="./assets/vendor/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <!-- Argon CSS -->
     <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
+    <link type="text/css" href="./assets/css/pagination.css?v=1.0.0" rel="stylesheet">
 </head>
 
 <body>
@@ -288,22 +289,19 @@
                             </div>
                             <nav aria-label="...">
                                 <ul id="demo" class="pagination justify-content-end mb-0">
-                                    <li class="page-item disabled">
-                                        <a class="page-link" href="#" tabindex="-1">
+                                    <li class="page-item">
+                                        <a class="page-link" href="
+                                            @routes.HomeController.listHeadersByHeightRangeApi(
+                                                if (lastBlocks.head.height + 50 > bestHeight) bestHeight
+                                                else lastBlocks.head.height + 50
+                                            )
+                                            " tabindex="-1">
                                             <i class="fas fa-angle-left"></i>
                                             <span class="sr-only">Previous</span>
                                         </a>
                                     </li>
-                                    <li class="page-item" >
-                                        <a class="page-link" href="#">1</a>
-                                    </li>
                                     <li class="page-item">
-                                        <a class="page-link" href="@routes.HomeController.index()">2</a>
-                                    </li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#">
+                                        <a class="page-link" href="@routes.HomeController.listHeadersByHeightRangeApi(lastBlocks.head.height-50)">
                                             <i class="fas fa-angle-right"></i>
                                             <span class="sr-only">Next</span>
                                         </a>
