--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -293,8 +293,7 @@
                                         <a class="page-link" href="
                                             @routes.HomeController.listHeadersByHeightRangeApi(
                                                 if (lastBlocks.head.height + 50 > bestHeight) bestHeight
-                                                else lastBlocks.head.height + 50
-                                            )
+                                                else lastBlocks.head.height + 50)
                                             " tabindex="-1">
                                             <i class="fas fa-angle-left"></i>
                                             <span class="sr-only">Previous</span>
