--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -92,7 +92,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./">
+                    <a class="nav-link" href="/node">
                         <i class="ni ni-tv-2 text-blue"></i> Nodes
                     </a>
                 </li>
