--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Brand -->
-        <a class="navbar-brand pt-0" href="./index.html">
+        <a class="navbar-brand pt-0" href="./">
             <img src="./assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
         </a>
         <!-- User -->
@@ -87,12 +87,12 @@
             <!-- Navigation -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="./">
+                    <a class="nav-link" href="/">
                         <i class="ni ni-tv-2 text-primary"></i> Blocks
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./">
+                    <a class="nav-link" href="/node">
                         <i class="ni ni-tv-2 text-blue"></i> Nodes
                     </a>
                 </li>
@@ -148,7 +148,7 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./index.html">Encry explorer</a>
+            <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./">Encry explorer</a>
             <!-- Form -->
             <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto" method="get"
              id="search-form">
