--- a/app/views/wallet.scala.html
+++ b/app/views/wallet.scala.html
@@ -1,5 +1,5 @@
 @import java.util.Date
-@(wallet: List[Wallet], tx: List[Option[Transaction]])
+@(wallet: List[Wallet], transaction: List[Transaction])
 
 <html>
 
@@ -113,12 +113,12 @@
                         <!-- Navigation -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">
+                            <a class="nav-link" href="../">
                                 <i class="ni ni-tv-2 text-primary"></i> Blocks
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./">
+                            <a class="nav-link" href="../nodes">
                                 <i class="ni ni-tv-2 text-blue"></i> Nodes
                             </a>
                         </li>
@@ -219,6 +219,56 @@
                                             </tr>
                                         }
 
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-xl-12 mb-5 mb-xl-0">
+                        <div class="card shadow">
+                            <div class="card-header border-0">
+                                <h3 class="mb-0">Last 50 blocks</h3>
+                            </div>
+                            <div class="table-responsive">
+                                <table class="table align-items-center table-flush">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th scope="col">Transaction id</th>
+                                            <th scope="col">Transaction timestamp</th>
+                                            <th scope="col">Transaction fee</th>
+                                            <th scope="col">is CoinBase</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    @for(tx <- transaction) {
+                                        <tr>
+                                            <td>
+                                                <a href="@routes.TransactionsController.getTransaction(tx.id)" class="nav-link" target="_blank">
+                                                @tx.id</a>
+                                            </td>
+                                            <td>
+                                                <span class="badge badge-dot mr-4">
+                                                @{
+                                                    new Date(tx.timestamp).format("yyyy-MM-dd HH:mm:ss")
+                                                }
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span class="badge badge-dot mr-4">
+                                                @tx.fee
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span class="badge badge-dot mr-4">
+                                                @{
+                                                    if(tx.isCoinbase) "Yes" else None
+                                                }
+                                                </span>
+                                            </td>
+                                        </tr>
+                                    }
                                     </tbody>
                                 </table>
                             </div>
