--- a/app/views/wallet.scala.html
+++ b/app/views/wallet.scala.html
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../nodes">
+                            <a class="nav-link" href="../node">
                                 <i class="ni ni-tv-2 text-blue"></i> Nodes
                             </a>
                         </li>
