--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -34,7 +34,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Brand -->
-        <a class="navbar-brand pt-0" href="./">
+        <a class="navbar-brand pt-0" href="../">
             <img src="./assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
         </a>
         <!-- User -->
