--- a/app/views/wallet.scala.html
+++ b/app/views/wallet.scala.html
@@ -29,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                     <!-- Brand -->
-                <a class="navbar-brand pt-0" href="./index.html">
+                <a class="navbar-brand pt-0" href="../">
                     <img src="../assets/img/brand/encry-logo.png" class="navbar-brand-img" alt="...">
                 </a>
                     <!-- User -->
