--- a/app/views/transactionInfo.scala.html
+++ b/app/views/transactionInfo.scala.html
@@ -286,7 +286,7 @@
                                             </td>
                                             <td>
                                                 <span class="badge badge-dot mr-4">
-                                                @tx.contract.contract
+                                                @tx.contract.map(_.contract)
                                                 </span>
                                             </td>
                                             <td>
