--- a/app/views/blockInfo.scala.html
+++ b/app/views/blockInfo.scala.html
@@ -296,6 +296,18 @@
                                             <th scope="row">
                                                 <div class="media align-items-center">
                                                     <div class="media-body">
+                                                        <span class="mb-0 text-sm">State root</span>
+                                                    </div>
+                                                </div>
+                                            </th>
+                                            <td>
+                                                @block.header.stateRoot
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">
+                                                <div class="media align-items-center">
+                                                    <div class="media-body">
                                                         <span class="mb-0 text-sm">EquihashSolution</span>
                                                     </div>
                                                 </div>
