--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -92,6 +92,11 @@
             <!-- Navigation -->
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="/uncom_trans">
+                        <i class="ni ni-tv-2 text-primary"></i> Uncommited
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/">
                         <i class="ni ni-tv-2 text-primary"></i> Blocks
                     </a>
