--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -92,7 +92,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/uncom_trans">
-                        <i class="ni ni-tv-2 text-primary"></i> Uncommited
+                        <i class="ni ni-tv-2 text-primary"></i> Unconfirmed
                     </a>
                 </li>
                 <li class="nav-item">
