--- a/app/views/uncomtransInfo.scala.html
+++ b/app/views/uncomtransInfo.scala.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <!-- Brand -->
             <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="@routes.HomeController.index()">
-                MemPool Transactions</a>
+                Encry Explorer</a>
         </div>
     </nav>
     <!-- Header -->
@@ -20,7 +20,7 @@
             <div class="col-xl-12 mb-5 mb-xl-0">
                 <div class="card shadow">
                     <div class="card-header border-0">
-                        <h3 class="mb-0">MemPool Transactions</h3>
+                        <h3 class="mb-0">Unconfirmed transactions</h3>
                     </div>
                     <div class="table-responsive">
                         <table class="table align-items-center table-flush">
