sort transaction rename

--- a/app/views/unconftransInfo.scala.html
+++ b/app/views/unconftransInfo.scala.html
@@ -27,8 +27,8 @@
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Transaction id</th>
-                                <th scope="col">Transaction timestamp</th>
-                                <th scope="col">Transaction fee</th>
+                                <th scope="col">timestamp</th>
+                                <th scope="col">fee</th>
                                 <th scope="col">is CoinBase</th>
                             </tr>
                             </thead>
