--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -93,7 +93,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/uncom_trans">
-                        <i class="ni ni-tv-2 text-primary"></i> Unconfirmed
+                        <i class="ni ni-tv-2 text-primary"></i> Transactions
                     </a>
                 </li>
                 <li class="nav-item">
