transactions pagination web

--- a/app/views/wallet.scala.html
+++ b/app/views/wallet.scala.html
@@ -1,5 +1,5 @@
 @import java.util.Date
-@(wallet: List[Wallet], transaction: List[Transaction])
+@(wallet: List[Wallet], transaction: List[DBTransaction])
 
 <html>
 
