--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -91,7 +91,7 @@
             <!-- Navigation -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/uncom_trans">
+                    <a class="nav-link" href="/transactions">
                         <i class="ni ni-tv-2 text-primary"></i> Transactions
                     </a>
                 </li>
