--- a/app/views/transactions.scala.html
+++ b/app/views/transactions.scala.html
@@ -15,13 +15,33 @@
     <div class="header bg-gradient-primary pb-8 pt-5 pt-md-8"></div>
     <!-- Page content -->
     <div class="container-fluid mt--7">
-        <!-- Table -->
         <div class="row mt-5">
             <div class="col-xl-12 mb-5 mb-xl-0">
                 <div class="card shadow">
                     <div class="card-header border-0">
-                        <h3 class="mb-0">Unconfirmed transactions</h3>
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h3 class="mb-0">Transactions</h3>
+                            </div>
+                            <nav aria-label="...">
+                                <ul id="demo" class="pagination justify-content-end mb-0">
+                                    <li class="page-item">
+                                        <a class="page-link" tabindex="-1">
+                                            <i class="fas fa-angle-left"></i>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="@routes.TransactionsController.transactionsPage(if(txs.size > 0)txs.head.id else "")">
+                                            <i class="fas fa-angle-right"></i>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
+
                     <div class="table-responsive">
                         <table class="table align-items-center table-flush">
                             <thead class="thead-light">
