--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -92,7 +92,7 @@
             <!-- Navigation -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/transactions">
+                    <a class="nav-link" href="/transactions?page=0">
                         <i class="ni ni-tv-2 text-primary"></i> Transactions
                     </a>
                 </li>
