--- a/app/views/transactions.scala.html
+++ b/app/views/transactions.scala.html
@@ -1,5 +1,5 @@
 @import java.util.Date
-@(txs: List[DBTransaction])
+@(txs: List[DBTransaction], page: Int)
 @main {
 
 <div class="main-content">
@@ -26,13 +26,16 @@
                             <nav aria-label="...">
                                 <ul id="demo" class="pagination justify-content-end mb-0">
                                     <li class="page-item">
-                                        <a class="page-link" tabindex="-1">
+                                        <a class="page-link"
+                                           href="@routes.TransactionsController.getUnconfirmedTransactions(if(page > 0) page - 1 else page)"
+                                           tabindex="-1">
                                             <i class="fas fa-angle-left"></i>
                                             <span class="sr-only">Previous</span>
                                         </a>
                                     </li>
                                     <li class="page-item">
-                                        <a class="page-link" href="@routes.TransactionsController.transactionsPage(if(txs.size > 0)txs.head.id else "")">
+                                        <a class="page-link"
+                                           href="@routes.TransactionsController.getUnconfirmedTransactions(if(txs.nonEmpty) page + 1 else page)">
                                             <i class="fas fa-angle-right"></i>
                                             <span class="sr-only">Next</span>
                                         </a>
