--- a/app/views/outputInfo.scala.html
+++ b/app/views/outputInfo.scala.html
@@ -262,7 +262,7 @@
                                                 </div>
                                             </th>
                                             <td>
-                                            @output.proposition
+                                            @output.proposition.contractHash
                                             </td>
                                         </tr>
                                         <tr>
